[package]
name = "codex_blf"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Read/write Vector BLF and ASC (CAN log) files."
readme = "README.md"
keywords = ["can", "blf", "asc", "vector", "logging"]
documentation = "https://docs.rs/codex_blf"
repository = "https://github.com/chirikoro/blf_asc"
homepage = "https://github.com/chirikoro/blf_asc"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "README.ja.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
chrono = "0.4"
flate2 = "1.0"
